add tutorial link

--- a/README
+++ b/README
@@ -7,3 +7,5 @@ response to the Haiti earthquake in January 2010, and today contains
 contributions from many volunteers inside and outside of Google. It was used
 again for the earthquakes in Chile, Yushu, and Japan, and now runs at
 http://google.org/personfinder/.
+
+Para instalar esta versión de Person Finder, visite el siguiente tutorial:  https://docs.google.com/document/d/1sV4Hn85XRODgRin6l_G2y8ud5Ge0Kr8e8UMlB0yBvgQ/edit?usp=sharing
